<resources>
    <string name="app_name">My Application</string>
    <string name="userName">Hello %s!</string>
    <string name="question_1">"What do you want to create ? Titans or Demigods ?"</string>
    <string name="question_2">"Heather prays at you to save her child, what do you do ?"</string>
    <string name="question_3">"Davon feels that he can't win the war against Titans/Demigods
        and ask for your help with a pray, what do you choose to do ?"</string>
    <string name="menu_short_story">In the beginnings it was nothing … until Satori,
    God of Awakening, is being created through the result
    of a white hole activation … known as the "big bang".
    Time and space of this universe begun to take shape while
    Satori is changing himself as being more and more awaken. He can be compared with an immense light
    that no living creature can look at it, his shadow can be compared
        with all the empty space that exists.
    Nobody knows if he have body or even a shape … though
    we know that he must exist due to his workings, his miraculous
    deeds are "talking" about him, the existence of humanity and all
        ambient nature that surrounds humans and creatures of the earth.
    Although chances for a "big bang" to happen were almost null
    in this universe, Satori begins his work and creates the earth,
    a planet were creatures like humans are living in peace.
    He provides earth with two red stars and a green moon in order
    for humans to have light during the day and during the night.</string>
    <string name="prologue_part1">
    n the old days, before even humans exist … Satori, God of Awakening felt his "aloneness" and
    mated with his own shadow, an eternal darkness
    producing hundreds of %ss.
        Satori\'s shadow, the Shadow Fiend, is now banished from the upper world
        in the depths of the underworld …
        While Satori used his limited powers to bring humans to life,
        he is forced to feed on their prayers, in order to keep his existence.
        If humans did not "return the favor" by praying at him, at least now and then,
        his existence will melt away into oblivion.
    \n
    Humanity lived in peace in the Satoric empire under the rule of
    Claudius dinasty, preaching their creator Satori and
    achieving to subdue everything before
    them, even the great Dragons …
    All Emperors from Satoric empire are known to conquer the great dragons
    and drinking their blood to celebrate their defeat.
    \n
    Now, 5023 years has passed till then. There are no dragons to hunt
    but Titans are coming to earth.
    It is the year 5023-ET, in the era of %s,
    fire Dinasty is estabilished in the fire lands
        by the strongest warrior among %ss,
    Pyromi, which is known also as being the cruelest amongst them.
    %ss and humans are rivalring for 200 years …
    As he wanted to create an elite army of humans called the fire mages,
    Pyromi took babies from their mother and bathed them in wine rather
    than water to see the baby reaction, if the baby was weak, he became a slave,
    but if the baby was strong, he would later be trained in the arts of fire to became a fire mage.
    </string>
    <string name="prologue_part1b">
    After the last emperor is killed "Claudius the third",
    Pyromi forced Heathera, daughter of Emperor of the Satoric empire, to marry him
    and enslaved all remaining humans.
    As the Oracle of the earth tells Pyromi that he will die by the hand of his unborn son,
    Pyromi decides to kill every children that Heathera was about to give birth.
    While Heathera is pregnant with her last son Davon,
    he has an accelaration in growing ten times
    faster than normal due to the miraculous dharma
    that he inherits from his ancestors.
    In an enraged moment, Pyromi approaches Heathera
    with a scythe to kill his last son,
    but Davon senses that and get out from
    inside his mother, took the scythe from his father\'s hands
    and cuts off his head.
    Rumors are spreading between citizens of fire Dinasty that
    Davon has been drinking the last dragon\'s blood given by his mother to
        celebrate his father\'s death,
    signs that he wants to keep his humans ancestors tradition.
        Heather have been blessed with the power to undo any action and turn back in time,
        if the one she's asking a question is lying.
        /n/n
        So, when Heathera saw your eyes turning red asks
        if you\'ve been drinking last dragon blood,
        what is your response ?
</string>
    <string name="prologue_part2">
\n
Twenty years later, Davon is trained in the arts of fire and ready
to become the king of the Fire Dinasty in 5043-ET,
frees all humans and swear to protect them.
\n
People of Fire Dinasty are seekers of the truth and unknown but are also
eager for growing in power, so in order to achieve this their quest is to
search for their true maker … the god above %s,
which nobody knows who is for now …
\n
For now they only know that their creator is %s,
but they are not satisfied with this since %s could
not offer to them more power.
\n
In the year 5543-ET, %s, the divine beings, unleashed war and chaos on earth,
so Fire Mages, people of the Fire Dinasty
turned against their creators to restore
order and peace in the lands and allied with ordinary humans.
In the beginnings of the war, %s killed almost all
Fire Mages, While Davon fights hardly against an ordinary Titan/Demigod
        that inherits fire power to fight as a weapon, he almost get killed by
        the Titan's fire attacks ... he is struggling to breath now since his body got burned
        almost to ashes ... but there is a critical moment when he looks over his mother Heathera
        before his death moment ..., so when he see his mother
    killed by the hand of the %s while he is injured near death,
his hatred grew so much that transformed himself into a Dragon!
\n\n
</string>
    <string name="prologue_part2b">
When Davon turned into a dragon and flied above the battlefield,
    day turned into night, as his shadow from the wings blocked the sun
    to shine over them.
    Now only the dragon\'s fire attacks would bring light to the
    battlefield but also death upon them.
    The epic war lasted eighteen hundred years but Davon and his Dinasty of fire prevailed in the end.
    He entitled himself as the king of titans, humans and fire mages,
but he banished his creators, the titans from the fire Dinasty and Satoric Empire,
and restored order and peace between them.
After he turned into normal form he was not the same anymore …
he become changed, he depicted an uncontrollable rage,
became unreasonable,lost his calm, wisdom but his strength remained the same.
\n
This is the first time when Davon is able to
transforms himself into a dragon.
\n
The result conflict is known as Davomachy and marks the
ending of %s Era and the beginning of a new era.</string>
    <string name="prologue_part6">Since Davon is not worthy to wield %s\'s sword
any humans believed that the chosen one for the swords
could have been Augustus, gossips
about Augustus being brought back to life are circulating but
nobody knows the truth …
    As Davon the fire mage, lost his right hand,
he starts to train his left hand to manipulate flames in the shape of a sword.
Meanwhile between humans, there is a true believer
of %s that regained many favors from the God
through meditation, but people are seeing him
only at night and there are believers that he
could be a vampire because he is 300 years old
and still looks young, he is known by the name of Tozen,
long white hair, very calm and patient.
\n
</string>
<string name="prologue_part6b">

Davon travels with a boat to search for a sword trainer,
he stops on an island full of fog and cold, the island
looks like it is from another planet, but he decides anyway
to continue to search further for a master in the art of swords,
but on his way Tozen stops him with the following words.
"You, i saw you in my dreams, you are the slayer of your own destiny …"
His eyes are grey, startingly dark in such pale face.
Davon stopped for a few seconds to think about what Tozen said to him,
but Davon is thinking that he is ill and decides to ignore him.
His pupils were pinpoints, burning black and they reached right into Davon and
weighted the soul inside him. The gray around them seemed alive
moving, like fog on the river on a dark night.

Although Davon being in a rush and also driven by his mad ego and
ignores Tozen with the following words. "I don\'t have time to help beggars…",
and push him away, Tozen thinks about grabbing the daggers tucked into his belt
at the small of his back,
hidden by his light cloack, but he is keeping his calm to not retaliate.
Tozen had once killed a fire mage years ago, and it almost cost
him his life. He would not underestimate one of them ever again.
Tozen respond: "We shall meet again, and then you will be awoke from this dream",
but Davon chose to ignore him again and continue his quest in finding the sword trainer.

</string>
    <string name="prologue_part6c">Tozen thinks of a plan to bring Augustus back to life by
going back in time … passing through the Awakening portal
can help him to do this but he can also lose
his life trying to do so, but another problem is that if Augustus will
be alive again, he could resurrect Pyromi and unleash chaos over the world.
    Tozen, is the only
human can resist and stay near the awakening Portal
and not die unlike other humans. Although he thinks
that is not ready to step into the portal yet.
His dharma is special among humans, he was always
considerated special because during the Pyromachy,
the war against Titans, he fought alongside
firemages and proved himself worthy in battle.</string>
    <string name="prologue_bottom">*AT - After Titans/Demigods Era *BT - Before Titans/Demigods Era *ET - Titans Era</string>
    <string name="new_game_button">New Game</string>
    <string name="sale_button">Sale on Now!</string>
    <string name="sign_up_login_in_button">Sign Up / Log In</string>
    <string name="options_button">Options</string>
    <string name="TitleOfChapter">Chapter 1:\n Death Of The Emperor</string>
    <string name="subTitle_page_one">Last Night In Prison.</string>
    <string name="theLoverString">Use the Lover\'s charm to paralyze your opponent so you can run away from battle, costs 80 fatigue</string>
    <string name="theSerpentString">Casting this in the future will cure yourself. Casting this spell costs 50 fatigue</string>
    <string name="theLadyString">Use the blessing of the Lady to double your attack damage for one entire chapter.</string>
</resources>