<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="@dimen/activity_vertical_margin"
    tools:context=".GameMenuActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_below="@id/optionsBtn">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/giff"
                android:layout_marginTop="-130dp"
                android:layout_width="260dp"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:src="@raw/dragon" />

                <TextView
                    android:id="@+id/tvStartGame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="30dp"
                    android:text="@string/menu_short_story"
                    android:textAlignment="center"
                    android:layout_marginTop="-80dp"
                    android:layout_below="@id/giff"
                    android:textSize="@dimen/activity_main_text_view_text_size" />
        </RelativeLayout>



    </ScrollView>

    <Button
        android:id="@+id/newGamebtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editTxt"
        android:background="@color/buttonBackground"
        android:text="@string/new_game_button" />

    <Button
        android:id="@+id/optionsBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btnAuthActivity"
        android:background="@color/buttonBackground"
        android:text="@string/options_button" />


    <Button
        android:id="@+id/btnPromo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnAuthActivity"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/btnAuthActivity"
        android:background="@color/buttonBackground"
        android:text="@string/sale_button"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btnAuthActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/newGamebtn"
        android:background="@color/buttonBackground"
        android:gravity="center"
        android:text="@string/sign_up_login_in_button" />

    <EditText
        android:id="@+id/editTxt"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:windowSoftInputMode="stateHidden"
        android:focusableInTouchMode="true"
        android:hint="Give a name to your god"
        android:inputType="textCapWords"
        android:textColor="#fff"
        android:maxEms="10"
        android:minEms="7" />
</RelativeLayout>
