<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/giff"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/satori"/>

            <TextView
                android:id="@+id/prologue_part6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_below="@id/giff"
                android:layout_marginRight="30dp"
                android:text="@string/prologue_part6"
                android:textAlignment="center"
                android:textSize="@dimen/activity_main_text_view_text_size" />

            <ImageView
                android:id="@+id/lefthand"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/prologue_part6"
                android:src="@drawable/travel"/>

            <TextView
                android:id="@+id/prologue_part6b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_below="@id/lefthand"
                android:layout_marginRight="10dp"
                android:text="@string/prologue_part6b"
                android:textAlignment="center"
                android:textSize="@dimen/activity_main_text_view_text_size" />

            <ImageView
                android:id="@+id/divine"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/prologue_part6b"
                android:src="@drawable/timeportal"/>

            <TextView
                android:id="@+id/prologue_part6c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_below="@id/divine"
                android:layout_marginRight="10dp"
                android:text="@string/prologue_part6c"
                android:textAlignment="center"
                android:textSize="@dimen/activity_main_text_view_text_size" />

            <TextView
                android:id="@+id/prolog_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/prologue_part6c"
                android:layout_centerHorizontal="true"
                android:textSize="8sp"
                android:layout_marginTop="10dp"
                android:text="@string/prologue_bottom"/>
            <Button
                android:id="@+id/continueBtnFromPrologue6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/prolog_bottom"
                android:text="continue"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>